Change user_id handling
